--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,12 +19,18 @@ body {
 }
 
 .wrapper {
+  padding: 50px 0;
+
   .logo {
     margin-top: 0;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 50px;
+  }
 
-    padding: 50px 0;
+  .content {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 230px;
   }
 }
