--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,7 @@ body {
   font-weight: normal;
   font-family: 'Open Sans';
 
+  color: map-get($COLORS, 'text');
   background-color: map-get($COLORS, 'background');
 }
 
