feat(components): tabs & tab

--- a/src/components/FiltersList/style.scss
+++ b/src/components/FiltersList/style.scss
@@ -6,13 +6,9 @@
     font-size: 12px;
     font-weight: 600;
     line-height: 12px;
-    letter-spacing: 0.5px;
+    letter-spacing: .5px;
     text-transform: uppercase;
 
     margin-bottom: 20px;
-  }
-
-  &__list {
-
   }
 }
