--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,6 +32,6 @@ body {
   .content {
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: 230px;
+    grid-template-columns: 230px auto;
   }
 }
