--- a/src/components/TicketsList/style.scss
+++ b/src/components/TicketsList/style.scss
@@ -2,8 +2,10 @@
   display: flex;
   flex-direction: column;
 
-  .ticket {
-    margin-bottom: 20px;
+  > * {
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
   }
 
   .button {
