--- a/src/components/FiltersList/style.scss
+++ b/src/components/FiltersList/style.scss
@@ -1,3 +1,7 @@
+.card--filters {
+  padding-bottom: 10px;
+}
+
 .filters {
   display: flex;
   flex-direction: column;
@@ -9,6 +13,6 @@
     letter-spacing: .5px;
     text-transform: uppercase;
 
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
 }
